--- a/seminar/clients.tex
+++ b/seminar/clients.tex
@@ -1,5 +1,5 @@
 %&latex
-\section{Clients}
+\section{Clients}\label{clients}
 % TODO: - main data structure that represents a window under window manager
 %         control
 %       - wrapper around X11 window
