--- a/seminar/conclusion.tex
+++ b/seminar/conclusion.tex
@@ -19,7 +19,7 @@ reminiscent of functional languages, or its tagged union enumerations. Another
 decisive factor in Rust's perceived efficacy is its \textit{consistency}.
 Whereas \cpp offers operator overloading through a multitude of constructs
 (varying from class methods to concrete template class implementations), Rust
-does so solely through \textit{trait} implementations.
+does so \textit{solely} through trait implementations.
 
 Rust's safety guarantees indeed make the language demonstrably superior from
 an \textit{error mitigation} point of view. However, those guarantees can at
