--- a/presentation/external_dependency_management.tex
+++ b/presentation/external_dependency_management.tex
@@ -2,7 +2,32 @@
 
 \section{External Dependency Management}
 
-\begin{csecframe}{Package Management}
+\begin{frame}[c]{External Dependency Management}
+
+    Practicalities of working with external code
+
+    % two core aspects of working with an external body of code
+
+    \begin{enumerate}
+        \itemsep.3em
+
+        \item \tbf{Package management}
+            \begin{itemize}
+                \item \textit{Availability} of external code
+            \end{itemize}
+
+        \item \tbf{Decoupling dependencies}
+            \begin{itemize}
+                \item \textit{Maintainability} of external code
+            \end{itemize}
+
+    \end{enumerate}
+
+    \vfill
+
+\end{frame}
+
+\begin{secframe}{Package Management}
 
     \begin{itemize}
 
@@ -24,7 +49,7 @@
 
     \vfill
 
-\end{csecframe}
+\end{secframe}
 
 \begin{frame}[fragile]{\underline{\cpp}: Package Management \hfill {\footnotesize \currentname}}
 
