--- a/presentation/objective.tex
+++ b/presentation/objective.tex
@@ -76,6 +76,9 @@
         \item \tbf{Same structure}
             \begin{itemize}
                 \item Built on top of the X Window System
+                    \begin{itemize}
+                        \item Library to communicate with the X server as external dependency
+                    \end{itemize}
             \end{itemize}
         \item \tbf{Same behavior}
             \begin{itemize}
